--- a/css/creative.css
+++ b/css/creative.css
@@ -402,6 +402,8 @@ header.masthead p {
 .aboutUs__left-side {
   background-color: #333333;
   padding: 3% 5%;
+  border-left: 10px solid #262626;
+  border-right: 10px solid #262626;
 }
 
 @media (min-width: 1200px) {
@@ -416,6 +418,8 @@ header.masthead p {
   background-color: #b30047;
   overflow: hidden !important;
   padding-top: 5% !important;
+  border-left: 10px solid #99003d;
+  border-right: 10px solid #99003d;
 }
 
 @media (min-width: 1200px) {
@@ -450,7 +454,7 @@ header.masthead p {
   }
 }
 
-i.service-box {
+.service-box {
   max-width: 400px;
 }
 
@@ -623,6 +627,8 @@ i.service-box {
   margin-top: 10%;
   background-color: #b30047;
   color: white;
+  border-left: 10px solid #99003d;
+  border-right: 10px solid #99003d;
 }
 
 @media (min-width: 576px) {
@@ -765,22 +771,6 @@ i.service-box {
   box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
 }
 
-/*
-<div class="wrap"></div>
-.wrap {
-    background: url("../img/carousel1.jpg");
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background-size: cover;
-    @media (min-width: 576px) {
-        height:125%;
-    }
-}
-*/
 .carousel {
   position: absolute;
   top: 0;
