--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -44,7 +44,7 @@
     }
     &:active,
     &:focus {
-        box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, .5) !important;
+        box-shadow: none !important;
     }
 }
 .carousel {
