--- a/css/creative.css
+++ b/css/creative.css
@@ -265,8 +265,16 @@ header.masthead p {
 
 @media (min-width: 1200px) {
   .masthead__row {
-    margin: 10% auto 8%;
+    margin: 12% auto 8%;
     border: 12px solid #b30047;
+    padding: 4%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .masthead__row {
+    margin-top: 18%;
+    width: 80%;
   }
 }
 
@@ -833,4 +841,10 @@ a.portfolio-box:hover {
 
 .navbar-brand {
   font-size: 1.4rem;
+}
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1340px;
+  }
 }
