--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -110,3 +110,9 @@ a.portfolio-box:hover {
 .navbar-brand {
     font-size: 1.4rem;
 }
+
+@media (min-width: 1400px) {
+    .container{
+        max-width:1340px;
+    }
+}
